@@ -55,7 +55,6 @@
 	<channel id="CLUB MTV PL" title="(?=(CLUB\s*MTV|MTV\s*DANCE)(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
 	<channel id="CNBC PL" title="(?=CNBC(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
 	<channel id="CNN PL" title="(?=CNN(\s*INTERNATIONAL)?(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
-	<channel id="COMEDY CENTRAL FAMILY PL" title="(?=(COMEDY\s*CENTRAL|CC)\s*(FAMILY|EXTRA\s*POLSAT)(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
 	<channel id="COMEDY CENTRAL PL" title="(?=(COMEDY|CC)\s*(CENTRAL|CENTERAL|CENTER)?(\s*POLSKA)?(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>	
 	<channel id="CZWÓRKA POLSKIE RADIO PL" title="(?=CZW.*RKA\s*POLSKIE\s*RADIO(\s*LIVE)?(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
 	<channel id="DA VINCI LEARNING PL" title="(?=DA\s*VINCI(\s*LEARNING)?(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
@@ -166,7 +165,7 @@
 	<channel id="POLSAT 2 PL" title="(?=POLSAT\s*2(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
 	<channel id="POLSAT BOXING NIGHT PL" title="(?=POLSAT\s*BOXING(\s*NIGHT)?(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
 	<channel id="POLSAT CAFÉ PL" title="(?=POLSAT\s*CAF(E|.)?(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
-	<channel id="POLSAT COMEDY CENTRAL EXTRA PL" title="(?=(POLSAT\s*COMEDY\s*)(CC|CENT(ER|RAL))(\s*EXTRA)?(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
+	<channel id="POLSAT COMEDY CENTRAL EXTRA PL" title="(?=((POLSAT\s*)?COMEDY\s*)(CC|CENT(ER|RAL))(\s*EXTRA)?(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
 	<channel id="POLSAT DOKU PL" title="(?=POLSAT\s*DOKU(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
 	<channel id="POLSAT FILM PL" title="(?=POLSAT\s*FILM(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
 	<channel id="POLSAT GAMES PL" title="(?=POLSAT\s*GAMES(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
@@ -351,7 +350,6 @@
 	<channel id="CLUB MTV.PL" title="(?=(CLUB\s*MTV|MTV\s*DANCE)(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
 	<channel id="CNBC.PL" title="(?=CNBC(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
 	<channel id="CNN.PL" title="(?=CNN(\s*INTERNATIONAL)?(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
-	<channel id="COMEDY CENTRAL FAMILY.PL" title="(?=(COMEDY\s*CENTRAL|CC)\s*(FAMILY|EXTRA\s*POLSAT)(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
 	<channel id="COMEDY CENTRAL.PL" title="(?=(COMEDY|CC)\s*(CENTRAL|CENTERAL|CENTER)?(\s*POLSKA)?(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>	
 	<channel id="CZWÓRKA POLSKIE RADIO.PL" title="(?=CZW.*RKA\s*POLSKIE\s*RADIO(\s*LIVE)?(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
 	<channel id="DA VINCI LEARNING.PL" title="(?=DA\s*VINCI(\s*LEARNING)?(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
@@ -462,7 +460,7 @@
 	<channel id="POLSAT 2.PL" title="(?=POLSAT\s*2(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
 	<channel id="POLSAT BOXING NIGHT.PL" title="(?=POLSAT\s*BOXING(\s*NIGHT)?(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
 	<channel id="POLSAT CAFÉ.PL" title="(?=POLSAT\s*CAF(E|.)?(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
-	<channel id="POLSAT COMEDY CENTRAL EXTRA.PL" title="(?=(POLSAT\s*COMEDY\s*)(CC|CENT(ER|RAL))(\s*EXTRA)?(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
+	<channel id="POLSAT COMEDY CENTRAL EXTRA.PL" title="(?=((POLSAT\s*)?COMEDY\s*)(CC|CENT(ER|RAL))(\s*EXTRA)?(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
 	<channel id="POLSAT DOKU.PL" title="(?=POLSAT\s*DOKU(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
 	<channel id="POLSAT FILM.PL" title="(?=POLSAT\s*FILM(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
 	<channel id="POLSAT GAMES.PL" title="(?=POLSAT\s*GAMES(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
@@ -647,7 +645,6 @@
 	<channel id="CLUB MTV" title="(?=(CLUB\s*MTV|MTV\s*DANCE)(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
 	<channel id="CNBC" title="(?=CNBC(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
 	<channel id="CNN" title="(?=CNN(\s*INTERNATIONAL)?(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
-	<channel id="COMEDY CENTRAL FAMILY" title="(?=(COMEDY\s*CENTRAL|CC)\s*(FAMILY|EXTRA\s*POLSAT)(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
 	<channel id="COMEDY CENTRAL" title="(?=(COMEDY|CC)\s*(CENTRAL|CENTERAL|CENTER)?(\s*POLSKA)?(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>	
 	<channel id="CZWÓRKA POLSKIE RADIO" title="(?=CZW.*RKA\s*POLSKIE\s*RADIO(\s*LIVE)?(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
 	<channel id="DA VINCI LEARNING" title="(?=DA\s*VINCI(\s*LEARNING)?(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
@@ -758,7 +755,7 @@
 	<channel id="POLSAT 2" title="(?=POLSAT\s*2(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
 	<channel id="POLSAT BOXING NIGHT" title="(?=POLSAT\s*BOXING(\s*NIGHT)?(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
 	<channel id="POLSAT CAFÉ" title="(?=POLSAT\s*CAF(E|.)?(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
-	<channel id="POLSAT COMEDY CENTRAL EXTRA" title="(?=(POLSAT\s*COMEDY\s*)(CC|CENT(ER|RAL))(\s*EXTRA)?(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
+	<channel id="POLSAT COMEDY CENTRAL EXTRA" title="(?=((POLSAT\s*)?COMEDY\s*)(CC|CENT(ER|RAL))(\s*EXTRA)?(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
 	<channel id="POLSAT DOKU" title="(?=POLSAT\s*DOKU(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
 	<channel id="POLSAT FILM" title="(?=POLSAT\s*FILM(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
 	<channel id="POLSAT GAMES" title="(?=POLSAT\s*GAMES(\s*TV)?(\s*HD|\s*UHD)?(\s*PL)?$)" strm=""/>
